--- a/CHANGES
+++ b/CHANGES
@@ -6,10 +6,14 @@ Changes
 
 * WorkerPool now inherits from Queue. All of the normal Queue operations apply.
 * WorkerPool.wait() has been deprecated in favour of WorkerPool.join().
-* WorkerPool constructor now accepts a worker_factory instead of a (WorkerClass, args) tuple.
-* EquippedWorker constructor now accepts a toolbox_factory instead of a (ToolboxClass, args) tuple.
+* WorkerPool constructor now accepts a worker_factory instead of a 
+  (WorkerClass, args) tuple.
+* EquippedWorker constructor now accepts a toolbox_factory instead of a 
+  (ToolboxClass, args) tuple.
 * Code has been simplified thanks to the previous two changes.
-* Added backwards compatibility with Python 2.4, but with reduced functionaltiy. WorkerPool's join() and task_done() do nothing in Python 2.4 for now.
+* Added backwards compatibility with Python 2.4, but with reduced
+  functionality. WorkerPool's join() and task_done() do nothing in Python 2.4
+  for now.
 
 0.9.1
 -----
